# httpserver/dto/user_dto.go
@@ -1,17 +1,16 @@
 package dto
 
-type UpdateTodoDto struct {
-	Status bool `json:"status" binding:"required"`
-}
-
 type UpsertUserDto struct {
-	Age      uint8  `json:"age" binding:"required"`
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
-	Username string `json:"username" binding:"required"`
+	FullName string `json:"full_name" binding:"required"`
 }
 
 type LoginDto struct {
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
+}
+
+type TopUpBalanceDto struct {
+	Balance uint `json:"balance" binding:"required,gt=0,lte=1000000000"`
 }
