# httpserver/models/auth_model.go
@@ -6,15 +6,12 @@ type JwtDecodedModel struct {
 }
 
 type Data struct {
-	CreatedAt    string      `json:"CreatedAt"`
-	DeletedAt    interface{} `json:"DeletedAt"`
-	ID           int64       `json:"ID"`
-	UpdatedAt    string      `json:"UpdatedAt"`
-	Age          int64       `json:"age"`
-	Comments     interface{} `json:"comments"`
-	Email        string      `json:"email"`
-	Password     string      `json:"password"`
-	Photos       interface{} `json:"photos"`
-	SocialMedias interface{} `json:"social_medias"`
-	Username     string      `json:"username"`
+	CreatedAt string      `json:"CreatedAt"`
+	DeletedAt interface{} `json:"DeletedAt"`
+	ID        int64       `json:"ID"`
+	UpdatedAt string      `json:"UpdatedAt"`
+	Email     string      `json:"email"`
+	Password  string      `json:"password"`
+	FullName  string      `json:"full_name"`
+	Balance   string      `json:"balance"`
 }
